kubernetes/ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dragoon-log-api-dev
    namespace: ${NAMESPACE}
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${DNS_BASE}
    secretName: cloudflare-certificate
  rules:
    - host: ${DNS_BASE}
      http:
        paths:
          - backend:
              service:
                name: dragoon-logger
                port:
                  number: 80
            path: /dragoon-log/(.+)
            pathType: Prefix
